--- a/src/main/resources/templates/pay.html
+++ b/src/main/resources/templates/pay.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,12 +11,34 @@
   <link rel="stylesheet" href="/AdminLTE-3.0.5/plugins/fontawesome-free/css/all.min.css">
   <!-- Ionicons -->
   <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+  <!-- daterange picker -->
+  <link rel="stylesheet" href="/AdminLTE-3.0.5/plugins/daterangepicker/daterangepicker.css">
+  <!-- Bootstrap Color Picker -->
+  <link rel="stylesheet" href="/AdminLTE-3.0.5/plugins/bootstrap-colorpicker/css/bootstrap-colorpicker.min.css">
+  <!-- Tempusdominus Bbootstrap 4 -->
+  <link rel="stylesheet" href="/AdminLTE-3.0.5/plugins/tempusdominus-bootstrap-4/css/tempusdominus-bootstrap-4.min.css">
+  <!-- Select2 -->
+  <link rel="stylesheet" href="/AdminLTE-3.0.5/plugins/select2/css/select2.min.css">
+  <link rel="stylesheet" href="/AdminLTE-3.0.5/plugins/select2-bootstrap4-theme/select2-bootstrap4.min.css">
+  <!-- Bootstrap4 Duallistbox -->
+  <link rel="stylesheet" href="/AdminLTE-3.0.5/plugins/bootstrap4-duallistbox/bootstrap-duallistbox.min.css">
   <!-- Theme style -->
   <link rel="stylesheet" href="/AdminLTE-3.0.5/dist/css/adminlte.min.css">
   <!-- Google Font: Source Sans Pro -->
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
   <!-- iCheck for checkboxes and radio inputs -->
   <link rel="stylesheet" href="/AdminLTE-3.0.5/plugins/icheck-bootstrap/icheck-bootstrap.min.css">
+
+  <script src="/bootstrap/dist/js/bootstrap.min.js"></script>
+
+  <script src="/bootstrap-table/bootstrap-table.js"
+          th:src="@{/bootstrap-table/bootstrap-table.js}"></script>
+  <script src="/bootstrap-table/locale/bootstrap-table-zh-CN.js"
+          th:src="@{/bootstrap-table/locale/bootstrap-table-zh-CN.js}"></script>
+
+
+  <script src="/layer/layer.js"
+          th:src="@{/layer/layer.js}"></script>
 </head>
 <body class="hold-transition sidebar-mini">
 <div class="wrapper">
@@ -389,6 +411,34 @@
               <div style="height:1vh">
 
               </div>
+              <div class="row">
+                <div class="col-12">
+                  <h4>
+                    <i class="fas fa-globe"></i> 货到付款/当面支付
+                  </h4>
+                </div>
+                <!-- /.col -->
+              </div>
+              <div class="row">
+                <div class="col-12">
+                  <label>选择想要收货的时间段:</label>
+                </div>
+                <div class="col-12">
+                  <div style="float:left;width: 80%" class="input-group">
+                    <div class="input-group-prepend">
+                      <span class="input-group-text"><i class="far fa-clock"></i></span>
+                    </div>
+                    <input type="text" class="form-control float-right" id="reservationtime">
+                  </div>
+                  <div style="float:right;width:10%">
+                    <a class="btn btn-warning  btn-sm" href="/meetpay">
+                      <img  src="/img/yen-2x.png"><img>
+                      结算
+                    </a>
+                  </div>
+                </div>
+              </div>
+              <div style="height:2vh" class="row"></div>
               <!-- Table row -->
               <div class="row">
                 <div class="col-12 table-responsive">
@@ -408,27 +458,27 @@
                         <img style="width:4vh;height: 4vh" src="/AdminLTE-3.0.5/dist/img/prod-1.jpg" class="product-image" alt="Product Image">
                         iPad pro</a></td>
                       <td>256G</td>
-                      <td>1234.00</td>
+                      <td>100.00</td>
                       <td>1</td>
-                      <td>1234.00</td>
+                      <td>100.00</td>
                     </tr>
                     <tr>
                       <td><a href="goods/details">
                         <img style="width:4vh;height: 4vh" src="/AdminLTE-3.0.5/dist/img/prod-1.jpg" class="product-image" alt="Product Image">
                         iPhone X Max</a></td>
                       <td>64G</td>
-                      <td>1234.00</td>
+                      <td>20.00</td>
                       <td>1</td>
-                      <td>1234.00</td>
+                      <td>20.00</td>
                     </tr>
                     <tr>
                       <td><a href="goods/details">
                         <img style="width:4vh;height: 4vh" src="/AdminLTE-3.0.5/dist/img/prod-1.jpg" class="product-image" alt="Product Image">
                         记事本</a></td>
                       <td>图案1</td>
-                      <td>5.00</td>
-                      <td>2</td>
-                      <td>10.00</td>
+                      <td>3.00</td>
+                      <td>1</td>
+                      <td>3.00</td>
                     </tr>
                     </tbody>
                   </table>
@@ -462,7 +512,7 @@
                       <a href="#" class="dropdown-item dropdown-footer">微信支付</a>
                     </div>
                   </div>
-                  <div style="float:left;width:1vh"></div>
+                  <div style="float:left;width:2vh"></div>
                   <div style="float: left;width: 5vh;position: relative;left:1vh;" class="nav-item dropdown">
                     <a class="nav-link" data-toggle="dropdown" href="#">
                       <img style="height: 5vh;width: 5vh" src="/img/logo.png">
@@ -473,7 +523,7 @@
                         <img  src="/img/yen-2x.png"><img> 平台余额
                         <p id="balance" class="float-right text-muted text-sm"></p>
                       </a>
-                      <a href="balancePay" class="dropdown-item">
+                      <a th:href="@{'/balancePay?total=123'}" class="dropdown-item">
                         <img  src="/img/blank.png"><img>
                         <span  class="float-right text-muted text-sm">结算</span>
                       </a>
@@ -487,7 +537,7 @@
                     <table class="table">
                       <tr>
                         <th>总计:</th>
-                        <td>$265.24</td>
+                        <td>123.0</td>
                       </tr>
                     </table>
                   </div>
@@ -505,14 +555,6 @@
     </section>
     <!-- /.content -->
   </div>
-  <!-- /.content-wrapper -->
-  <footer class="main-footer no-print">
-    <div class="float-right d-none d-sm-block">
-      <b>Version</b> 3.0.5
-    </div>
-    <strong>Copyright &copy; 2014-2019 <a href="http://adminlte.io">AdminLTE.io</a>.</strong> All rights
-    reserved.
-  </footer>
 
   <!-- Control Sidebar -->
   <aside class="control-sidebar control-sidebar-dark">
@@ -525,11 +567,100 @@
 <!-- jQuery -->
 <script src="/PayJs/Balance.js"></script>
 <script src="/AdminLTE-3.0.5/plugins/jquery/jquery.min.js"></script>
+<!-- Select2 -->
+<script src="/AdminLTE-3.0.5/plugins/select2/js/select2.full.min.js"></script>
+<!-- Bootstrap4 Duallistbox -->
+<script src="/AdminLTE-3.0.5/plugins/bootstrap4-duallistbox/jquery.bootstrap-duallistbox.min.js"></script>
+<!-- InputMask -->
+<script src="/AdminLTE-3.0.5/plugins/moment/moment.min.js"></script>
+<script src="/AdminLTE-3.0.5/plugins/inputmask/min/jquery.inputmask.bundle.min.js"></script>
+<!-- date-range-picker -->
+<script src="/AdminLTE-3.0.5/plugins/daterangepicker/daterangepicker.js"></script>
+<!-- bootstrap color picker -->
+<script src="/AdminLTE-3.0.5/plugins/bootstrap-colorpicker/js/bootstrap-colorpicker.min.js"></script>
+<!-- Tempusdominus Bootstrap 4 -->
+<script src="/AdminLTE-3.0.5/plugins/tempusdominus-bootstrap-4/js/tempusdominus-bootstrap-4.min.js"></script>
+<!-- Bootstrap Switch -->
+<script src="/AdminLTE-3.0.5/plugins/bootstrap-switch/js/bootstrap-switch.min.js"></script>
 <!-- Bootstrap 4 -->
 <script src="/AdminLTE-3.0.5/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
 <!-- AdminLTE App -->
 <script src="/AdminLTE-3.0.5/dist/js/adminlte.min.js"></script>
 <!-- AdminLTE for demo purposes -->
 <script src="/AdminLTE-3.0.5/dist/js/demo.js"></script>
+<!-- Page script -->
+<script>
+  $(function () {
+    //Initialize Select2 Elements
+    $('.select2').select2()
+
+    //Initialize Select2 Elements
+    $('.select2bs4').select2({
+      theme: 'bootstrap4'
+    })
+
+    //Datemask dd/mm/yyyy
+    $('#datemask').inputmask('dd/mm/yyyy', { 'placeholder': 'dd/mm/yyyy' })
+    //Datemask2 mm/dd/yyyy
+    $('#datemask2').inputmask('mm/dd/yyyy', { 'placeholder': 'mm/dd/yyyy' })
+    //Money Euro
+    $('[data-mask]').inputmask()
+
+    //Date range picker
+    $('#reservationdate').datetimepicker({
+      format: 'L'
+    });
+    //Date range picker
+    $('#reservation').daterangepicker()
+    //Date range picker with time picker
+    $('#reservationtime').daterangepicker({
+      timePicker: true,
+      timePickerIncrement: 30,
+      locale: {
+        format: 'MM/DD/YYYY hh:mm A'
+      }
+    })
+    //Date range as a button
+    $('#daterange-btn').daterangepicker(
+            {
+              ranges   : {
+                'Today'       : [moment(), moment()],
+                'Yesterday'   : [moment().subtract(1, 'days'), moment().subtract(1, 'days')],
+                'Last 7 Days' : [moment().subtract(6, 'days'), moment()],
+                'Last 30 Days': [moment().subtract(29, 'days'), moment()],
+                'This Month'  : [moment().startOf('month'), moment().endOf('month')],
+                'Last Month'  : [moment().subtract(1, 'month').startOf('month'), moment().subtract(1, 'month').endOf('month')]
+              },
+              startDate: moment().subtract(29, 'days'),
+              endDate  : moment()
+            },
+            function (start, end) {
+              $('#reportrange span').html(start.format('MMMM D, YYYY') + ' - ' + end.format('MMMM D, YYYY'))
+            }
+    )
+
+    //Timepicker
+    $('#timepicker').datetimepicker({
+      format: 'LT'
+    })
+
+    //Bootstrap Duallistbox
+    $('.duallistbox').bootstrapDualListbox()
+
+    //Colorpicker
+    $('.my-colorpicker1').colorpicker()
+    //color picker with addon
+    $('.my-colorpicker2').colorpicker()
+
+    $('.my-colorpicker2').on('colorpickerChange', function(event) {
+      $('.my-colorpicker2 .fa-square').css('color', event.color.toString());
+    });
+
+    $("input[data-bootstrap-switch]").each(function(){
+      $(this).bootstrapSwitch('state', $(this).prop('checked'));
+    });
+
+  })
+</script>
 </body>
 </html>
