--- a/src/main/resources/templates/user/ChangePassword.html
+++ b/src/main/resources/templates/user/ChangePassword.html
@@ -31,7 +31,7 @@
             <form>
                 <p id="alertOld" style="color: rgba(255,0,0,0.5);margin: 0;font-size: 80%"></p>
                 <div class="input-group mb-3">
-                    <input id="oldpassword" type="password" class="form-control" placeholder="旧密码" onchange="Oldlistener()">
+                    <input id="oldpassword" type="password" class="form-control" placeholder="旧密码" oninput="Oldlistener()">
                     <div class="input-group-append">
                         <div class="input-group-text">
                             <span class="fas fa-lock"></span>
@@ -40,7 +40,7 @@
                 </div>
                 <p id="alertRewrite" style="color: rgba(255,0,0,0.5);margin: 0;font-size: 80%;"></p>
                 <div class="input-group mb-3">
-                    <input id="rewriteoldpassword"type="password" class="form-control" placeholder="再次输入旧密码" onchange="RewriteOldlistener()">
+                    <input id="rewriteoldpassword"type="password" class="form-control" placeholder="再次输入旧密码" oninput="RewriteOldlistener()">
                     <div class="input-group-append">
                         <div class="input-group-text">
                             <span class="fas fa-lock"></span>
@@ -49,7 +49,7 @@
                 </div>
                 <p id="alertNew" style="color: rgba(255,0,0,0.5);margin: 0;font-size: 80%;"></p>
                 <div class="input-group mb-3">
-                    <input id="newpassword" type="password" class="form-control" placeholder="新密码" onchange="Newlistener()">
+                    <input id="newpassword" type="password" class="form-control" placeholder="新密码" oninput="Newlistener()">
                     <div class="input-group-append">
                         <div class="input-group-text">
                             <span class="fas fa-lock"></span>
