--- a/src/main/resources/templates/user/UserProfile.html
+++ b/src/main/resources/templates/user/UserProfile.html
@@ -170,7 +170,7 @@
                     <!-- Add icons to the links using the .nav-icon class
                          with font-awesome or any other icon font library -->
                     <li class="nav-item has-treeview">
-                        <a href="./userInfomation.html" class="nav-link">
+                        <a href="/user/MyInformation" class="nav-link">
                             <i class="nav-icon fas fa-tachometer-alt"></i>
                             <p>
                                 个人中心
@@ -178,7 +178,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a href="./AddressManage.html" class="nav-link">
+                        <a href="/user/AdressManage" class="nav-link">
                             <i class="nav-icon fas fa-th"></i>
                             <p>
                                 地址管理
@@ -186,7 +186,7 @@
                         </a>
                     </li>
                     <li class="nav-item has-treeview">
-                        <a href="./ChangePassword.html" class="nav-link">
+                        <a href="/user/changepassword" class="nav-link">
                             <i class="nav-icon fas fa-copy"></i>
                             <p>
                                 修改密码
@@ -194,7 +194,7 @@
                         </a>
                     </li>
                     <li class="nav-item has-treeview">
-                        <a href="./BalanceRecharge.html" class="nav-link">
+                        <a href="/balance/balancepage" class="nav-link">
                             <i class="nav-icon fas fa-copy"></i>
                             <p>
                                 余额充值
@@ -202,7 +202,7 @@
                         </a>
                     </li>
                     <li class="nav-item has-treeview">
-                        <a href="./UserProfile.html" class="nav-link">
+                        <a href="/user/MyProfile" class="nav-link">
                             <i class="nav-icon fas fa-copy"></i>
                             <p>
                                 我的主页
@@ -210,7 +210,7 @@
                         </a>
                     </li>
                     <li class="nav-item has-treeview">
-                        <a href="../goods.html" class="nav-link">
+                        <a href="/" class="nav-link">
                             <i class="nav-icon fas fa-copy"></i>
                             <p>
                                 商品页面
@@ -218,7 +218,7 @@
                         </a>
                     </li>
                     <li class="nav-item has-treeview">
-                        <a href="" class="nav-link">
+                        <a href="/user/OrderHistory" class="nav-link">
                             <i class="nav-icon fas fa-copy"></i>
                             <p>
                                 订单记录
@@ -229,7 +229,7 @@
                         <a href="" class="nav-link">
                             <i class="nav-icon fas fa-copy"></i>
                             <p>
-                               浏览记录
+                                浏览记录
                             </p>
                         </a>
                     </li>
