--- a/src/main/resources/templates/user/CheckOrder.html
+++ b/src/main/resources/templates/user/CheckOrder.html
@@ -215,7 +215,7 @@
                         </a>
                     </li>
                     <li class="nav-item has-treeview">
-                        <a href="./UserProfile.html" class="nav-link">
+                        <a href="/user/MyProfile" class="nav-link">
                             <i class="nav-icon fas fa-copy"></i>
                             <p>
                                 我的主页
