--- a/src/main/resources/templates/login/loginPage.html
+++ b/src/main/resources/templates/login/loginPage.html
@@ -673,12 +673,16 @@
                 <!-- /.card-body -->
                 <div class="card-footer">
 
-                    <button type="submit" class="btn btn-info">Sign in</button>
+                    <button type="submit" class="btn btn-info" onclick="error()">Sign in</button>
                     <button type="submit" class="btn btn-default float-right">Cancel</button>
                     <div class="row">
                       <a href="/signUpPage" class="offset-11" style="font-family: 微软雅黑;text-align: right;
                       font-size: small">
                         还未注册</a>
+                      <div >
+                        <div th:text="${errorMsg}"></div>
+                        <input type="hidden" id="errorMsg" value="${errorMsg}}">
+                      </div>
                     </div>
                 </div>
                 <!-- /.card-footer -->
@@ -741,6 +745,17 @@ function showResponse(message) {
     subtitle: 'Subtitle',
     body: message
   })
+}
+
+function error() {
+  var data= $("#errorMsg").getAttributeNames();
+  if(data!=null){
+    $(document).Toasts('create', {
+      class: 'bg-info',
+      title: '错误提示',
+      body:"错误提示"
+    })
+  }
 }
 
 </script>
