--- a/src/main/resources/templates/login/loginPage.html
+++ b/src/main/resources/templates/login/loginPage.html
@@ -615,12 +615,13 @@
       <div class="container-fluid">
         <div class="row mb-2">
           <div class="col-sm-6">
-            <h1>网上购物商城</h1>
+
           </div>
           <div class="col-sm-6">
             <ol class="breadcrumb float-sm-right">
-              <li class="breadcrumb-item"><a href="#">Home</a></li>
-              <li class="breadcrumb-item active">General Form</li>
+              <a th:href="@{/}">
+                <img th:src="@{/img/logo.png}" alt="logo" style="width: 40px;height: 40px"/>
+              </a>
             </ol>
           </div>
         </div>
