--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -195,7 +195,7 @@
     <aside class="main-sidebar sidebar-light-primary small-text elevation-4">
         <!-- Brand Logo -->
         <a href="/AdminLTE-3.0.5/index3.html" class="brand-link">
-            <img src="/AdminLTE-3.0.5/dist/img/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3"
+            <img src="/img/logo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3"
                  style="opacity: .8">
             <span class="brand-text font-weight-light">AdminLTE 3</span>
         </a>
@@ -384,14 +384,11 @@
                     <h3 class="card-title">已选择的商品</h3>
                 </div>
                 <div class="card-body p-0">
-                    <table class="table table-striped projects">
+                    <table class="table table-striped projects" id="cartTable">
                         <thead>
                         <tr>
                             <th style="width: 1%">
-                                <div class="icheck-primary">
-                                    <input type="checkbox" value="" id="check0">
-                                    <label for="check0"></label>
-                                </div>
+
                             </th>
                             <th style="width: 20%">
                                 商 品
@@ -406,14 +403,23 @@
                                 状 态
                             </th>
                             <th style="width: 8%">
-                                小 计
+                                单 价
                             </th>
-                            <th style="width: 20%">
+                            <th style="width: 20%"class="project-actions text-right">
+                                <a class="btn btn-warning  btn-sm" href="/pay">
+                                    <img  src="/img/yen-2x.png"><img>
+                                    结算
+                                </a>
+                                <a class="btn btn-danger btn-sm" href="#">
+                                    <i class="fas fa-trash">
+                                    </i>
+                                    删除
+                                </a>
                             </th>
                         </tr>
                         </thead>
                         <tbody>
-                        <tr>
+                        <!--<tr>
                             <td>
                                 <div class="icheck-primary">
                                     <input type="checkbox" value="" id="check1">
@@ -423,7 +429,7 @@
                             <td>
                                 <a href="goods/details">
                                     <img style="width:4vh;height: 4vh" src="/AdminLTE-3.0.5/dist/img/prod-1.jpg" class="product-image" alt="Product Image">
-                                    iPad pro</a></td>
+                                    iPad pro</a>
                             </td>
                             <td>
                             256G
@@ -452,7 +458,7 @@
                                     删除
                                 </a>
                             </td>
-                        </tr>
+                        </tr>-->
                         </tbody>
                     </table>
                 </div>
@@ -483,6 +489,7 @@
 
 <!-- jQuery -->
 <script src="/AdminLTE-3.0.5/plugins/jquery/jquery.min.js"></script>
+<script src="/CartJs/CartJs.js"></script>
 <!-- Bootstrap 4 -->
 <script src="/AdminLTE-3.0.5/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
 <!-- AdminLTE App -->
