--- a/src/main/resources/templates/goods.html
+++ b/src/main/resources/templates/goods.html
@@ -394,13 +394,13 @@
                         </ol>
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img class="d-block w-100" src="https://placehold.it/300x100/39CCCC/ffffff&text=I+Love+Bootstrap" alt="First slide">
+                                <img class="d-block w-100" src="https://placehold.it/300x100/39CCCC/ffffff&text=I+Love+SnailGo" alt="First slide">
                             </div>
                             <div class="carousel-item">
-                                <img class="d-block w-100" src="https://placehold.it/300x100/3c8dbc/ffffff&text=I+Love+Bootstrap" alt="Second slide">
+                                <img class="d-block w-100" src="https://placehold.it/300x100/3c8dbc/ffffff&text=I+Love+SnailGo" alt="Second slide">
                             </div>
                             <div class="carousel-item">
-                                <img class="d-block w-100" src="https://placehold.it/300x100/f39c12/ffffff&text=I+Love+Bootstrap" alt="Third slide">
+                                <img class="d-block w-100" src="https://placehold.it/300x100/f39c12/ffffff&text=I+I+Love+SnailGo" alt="Third slide">
                             </div>
                         </div>
                         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
