--- a/src/main/resources/templates/goods/details.html
+++ b/src/main/resources/templates/goods/details.html
@@ -6,7 +6,8 @@
   <title>商品详情</title>
   <!-- Tell the browser to be responsive to screen width -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
+  <!-- SweetAlert2 -->
+  <link rel="stylesheet" href="/AdminLTE-3.0.5/plugins/sweetalert2-theme-bootstrap-4/bootstrap-4.min.css">
   <!-- Ionicons -->
   <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
   <!-- overlayScrollbars -->
@@ -350,89 +351,92 @@
             <div class="col-12 col-sm-6">
               <h3 class="d-inline-block d-sm-none"><p class="title fl" th:text="${goodsdetails[0].goodsName}"></p></h3>
               <div class="col-12">
-                <img id="img-result-1" th:src="'/goods_pics/'+${goodsdetails[0].goodsId}+'-pic-1.jpg'"/>
+                <img id="img-result-1" class="product-image" th:src="'/goods_pics/'+${goodsdetails[0].goodsId}+'-pic-1.jpg'" alt="Product Image">
               </div>
               <div class="col-12 product-image-thumbs">
-                <div class="product-image-thumb active"><img src="/AdminLTE-3.0.5/dist/img/prod-1.jpg" alt="Product Image"></div>
-                <div class="product-image-thumb" ><img src="/AdminLTE-3.0.5/dist/img/prod-2.jpg" alt="Product Image"></div>
-                <div class="product-image-thumb" ><img src="/AdminLTE-3.0.5/dist/img/prod-3.jpg" alt="Product Image"></div>
-                <div class="product-image-thumb" ><img src="/AdminLTE-3.0.5/dist/img/prod-4.jpg" alt="Product Image"></div>
-                <div class="product-image-thumb" ><img src="/AdminLTE-3.0.5/dist/img/prod-5.jpg" alt="Product Image"></div>
+                <div class="product-image-thumb active"><img th:src="'/goods_pics/'+${goodsdetails[0].goodsId}+'-pic-1.jpg'" alt="Product Image"></div>
+                <div class="product-image-thumb" ><img th:src="'/goods_pics/'+${goodsdetails[0].goodsId}+'-pic-2.jpg'" alt="Product Image"></div>
+                <div class="product-image-thumb" ><img th:src="'/goods_pics/'+${goodsdetails[0].goodsId}+'-pic-3.jpg'" alt="Product Image"></div>
+                <div class="product-image-thumb" ><img th:src="'/goods_pics/'+${goodsdetails[0].goodsId}+'-pic-4.jpg'" alt="Product Image"></div>
+
               </div>
             </div>
             <div class="col-12 col-sm-6">
               <h3 class="my-3"><p class="title fl" th:text="${goodsdetails[0].goodsName}"></p></h3>
-              <p>Raw denim you probably haven't heard of them jean shorts Austin. Nesciunt tofu stumptown aliqua butcher retro keffiyeh dreamcatcher synth. Cosby sweater eu banh mi, qui irure terr.</p>
+              <p th:text="${goodsdetails[0].goodsDsp}"></p>
 
               <hr>
-              <h4>Available Colors</h4>
+              <h4>颜色</h4>
               <div class="btn-group btn-group-toggle" data-toggle="buttons">
                 <label class="btn btn-default text-center active">
                   <input type="radio" name="color_option" id="color_option1" autocomplete="off" checked="">
-                  Green
+                  绿
                   <br>
                   <i class="fas fa-circle fa-2x text-green"></i>
                 </label>
                 <label class="btn btn-default text-center">
                   <input type="radio" name="color_option" id="color_option2" autocomplete="off">
-                  Blue
+                  蓝
                   <br>
                   <i class="fas fa-circle fa-2x text-blue"></i>
                 </label>
                 <label class="btn btn-default text-center">
                   <input type="radio" name="color_option" id="color_option3" autocomplete="off">
-                  Purple
+                  紫
                   <br>
                   <i class="fas fa-circle fa-2x text-purple"></i>
                 </label>
                 <label class="btn btn-default text-center">
                   <input type="radio" name="color_option" id="color_option4" autocomplete="off">
-                  Red
+                  红
                   <br>
                   <i class="fas fa-circle fa-2x text-red"></i>
                 </label>
                 <label class="btn btn-default text-center">
                   <input type="radio" name="color_option" id="color_option5" autocomplete="off">
-                  Orange
+                  橙
                   <br>
                   <i class="fas fa-circle fa-2x text-orange"></i>
                 </label>
               </div>
 
-              <h4 class="mt-3">Size <small>Please select one</small></h4>
+              <h4 class="mt-3">规格</h4>
               <div class="btn-group btn-group-toggle" data-toggle="buttons">
                 <label class="btn btn-default text-center">
                   <input type="radio" name="color_option" id="color_option1" autocomplete="off">
                   <span class="text-xl">S</span>
                   <br>
-                  Small
+                  小
                 </label>
                 <label class="btn btn-default text-center">
                   <input type="radio" name="color_option" id="color_option1" autocomplete="off">
                   <span class="text-xl">M</span>
                   <br>
-                  Medium
+                  中
                 </label>
                 <label class="btn btn-default text-center">
                   <input type="radio" name="color_option" id="color_option1" autocomplete="off">
                   <span class="text-xl">L</span>
                   <br>
-                  Large
+                  大
                 </label>
                 <label class="btn btn-default text-center">
                   <input type="radio" name="color_option" id="color_option1" autocomplete="off">
                   <span class="text-xl">XL</span>
                   <br>
-                  Xtra-Large
+                  超大
                 </label>
               </div>
 
               <div class="bg-gray py-2 px-3 mt-4">
                 <h2 class="mb-0">
-                  $<p class="title fl" th:text="${goodsdetails[0].goodsPrice}"></p>
+                  <p class="title fl" th:text="'¥'+${goodsdetails[0].goodsPrice}"></p>
                 </h2>
+                <h4 class="mb-0">
+                  <p class="title fl" th:text="'商品库存：'+${goodsdetails[0].goodsRemaning}"></p>
+                </h4>
                 <h4 class="mt-0">
-                  <small>Ex Tax: $80.00 </small>
+                  <small>运费：包邮 </small>
                 </h4>
               </div>
 
@@ -441,12 +445,14 @@
                   <i class="fas fa-check fa-lg mr-2"></i>
                   立即购买
                 </div>
-
-                <div class="btn btn-default btn-lg btn-flat">
-                  <i class="fas fa-cart-plus fa-lg mr-2"></i>
-                  加入购物车
-                </div>
+                  <div type="button" class="btn btn-default btn-lg btn-flat swalDefaultSuccess">
+                    <a th:href="'/goods/addgoodstocart?'+'userId=1'+'&goodsId='+${goodsdetails[0].goodsId}+'&price='+${goodsdetails[0].goodsPrice}+'&quantity=1'+'&goodsname='+${goodsdetails[0].goodsName}" >
+                      <i class="fas fa-cart-plus fa-lg mr-2"></i>
+                      添加到购物车
+                    </a>
+                  </div>
               </div>
+
               <div class="card-title"><h4><i class="fas fa-share"></i>分享该商品</h4> </div>
               <div>
 
@@ -472,13 +478,13 @@
           <div class="row mt-4">
             <nav class="w-100">
               <div class="nav nav-tabs" id="product-tab" role="tablist">
-                <a class="nav-item nav-link active" id="product-desc-tab" data-toggle="tab" href="#product-desc" role="tab" aria-controls="product-desc" aria-selected="true">Description</a>
-                <a class="nav-item nav-link" id="product-comments-tab" data-toggle="tab" href="#product-comments" role="tab" aria-controls="product-comments" aria-selected="false">Comments</a>
-                <a class="nav-item nav-link" id="product-rating-tab" data-toggle="tab" href="#product-rating" role="tab" aria-controls="product-rating" aria-selected="false">Rating</a>
+                <a class="nav-item nav-link active" id="product-desc-tab" data-toggle="tab" href="#product-desc" role="tab" aria-controls="product-desc" aria-selected="true">描述</a>
+                <a class="nav-item nav-link" id="product-comments-tab" data-toggle="tab" href="#product-comments" role="tab" aria-controls="product-comments" aria-selected="false">评论</a>
+                <a class="nav-item nav-link" id="product-rating-tab" data-toggle="tab" href="#product-rating" role="tab" aria-controls="product-rating" aria-selected="false">相似商品</a>
               </div>
             </nav>
             <div class="tab-content p-3" id="nav-tabContent">
-              <div class="tab-pane fade show active" id="product-desc" role="tabpanel" aria-labelledby="product-desc-tab"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi vitae condimentum erat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Sed posuere, purus at efficitur hendrerit, augue elit lacinia arcu, a eleifend sem elit et nunc. Sed rutrum vestibulum est, sit amet cursus dolor fermentum vel. Suspendisse mi nibh, congue et ante et, commodo mattis lacus. Duis varius finibus purus sed venenatis. Vivamus varius metus quam, id dapibus velit mattis eu. Praesent et semper risus. Vestibulum erat erat, condimentum at elit at, bibendum placerat orci. Nullam gravida velit mauris, in pellentesque urna pellentesque viverra. Nullam non pellentesque justo, et ultricies neque. Praesent vel metus rutrum, tempus erat a, rutrum ante. Quisque interdum efficitur nunc vitae consectetur. Suspendisse venenatis, tortor non convallis interdum, urna mi molestie eros, vel tempor justo lacus ac justo. Fusce id enim a erat fringilla sollicitudin ultrices vel metus. </div>
+              <div class="tab-pane fade show active" id="product-desc" role="tabpanel" aria-labelledby="product-desc-tab"><p th:text="${goodsdetails[0].goodsDsp}"></p> </div>
               <div class="tab-pane fade" id="product-comments" role="tabpanel" aria-labelledby="product-comments-tab"> Vivamus rhoncus nisl sed venenatis luctus. Sed condimentum risus ut tortor feugiat laoreet. Suspendisse potenti. Donec et finibus sem, ut commodo lectus. Cras eget neque dignissim, placerat orci interdum, venenatis odio. Nulla turpis elit, consequat eu eros ac, consectetur fringilla urna. Duis gravida ex pulvinar mauris ornare, eget porttitor enim vulputate. Mauris hendrerit, massa nec aliquam cursus, ex elit euismod lorem, vehicula rhoncus nisl dui sit amet eros. Nulla turpis lorem, dignissim a sapien eget, ultrices venenatis dolor. Curabitur vel turpis at magna elementum hendrerit vel id dui. Curabitur a ex ullamcorper, ornare velit vel, tincidunt ipsum. </div>
               <div class="tab-pane fade" id="product-rating" role="tabpanel" aria-labelledby="product-rating-tab"> Cras ut ipsum ornare, aliquam ipsum non, posuere elit. In hac habitasse platea dictumst. Aenean elementum leo augue, id fermentum risus efficitur vel. Nulla iaculis malesuada scelerisque. Praesent vel ipsum felis. Ut molestie, purus aliquam placerat sollicitudin, mi ligula euismod neque, non bibendum nibh neque et erat. Etiam dignissim aliquam ligula, aliquet feugiat nibh rhoncus ut. Aliquam efficitur lacinia lacinia. Morbi ac molestie lectus, vitae hendrerit nisl. Nullam metus odio, malesuada in vehicula at, consectetur nec justo. Quisque suscipit odio velit, at accumsan urna vestibulum a. Proin dictum, urna ut varius consectetur, sapien justo porta lectus, at mollis nisi orci et nulla. Donec pellentesque tortor vel nisl commodo ullamcorper. Donec varius massa at semper posuere. Integer finibus orci vitae vehicula placerat. </div>
             </div>
@@ -517,6 +523,162 @@
 <script src="/AdminLTE-3.0.5/dist/js/adminlte.min.js"></script>
 <!-- AdminLTE for demo purposes -->
 <script src="/AdminLTE-3.0.5/dist/js/demo.js"></script>
+<script src="/AdminLTE-3.0.5/plugins/sweetalert2/sweetalert2.min.js"></script>
+<script type="text/javascript">
+  $(function() {
+    const Toast = Swal.mixin({
+      toast: true,
+      position: 'top-end',
+      showConfirmButton: false,
+      timer: 9000
+    });
 
+    $('.swalDefaultSuccess').click(function() {
+      Toast.fire({
+        icon: 'success',
+        title: '添加到购物车成功',
+        delay: 10000
+      })
+    });
+    $('.swalDefaultInfo').click(function() {
+      Toast.fire({
+        icon: 'info',
+        title: 'test'
+      })
+    });
+    $('.swalDefaultError').click(function() {
+      Toast.fire({
+        icon: 'error',
+        title: 'test'
+      })
+    });
+    $('.swalDefaultWarning').click(function() {
+      Toast.fire({
+        icon: 'warning',
+        title: 'test'
+      })
+    });
+    $('.swalDefaultQuestion').click(function() {
+      Toast.fire({
+        icon: 'question',
+        title: 'test'
+      })
+    });
+
+    $('.toastrDefaultSuccess').click(function() {
+      toastr.success('test')
+    });
+    $('.toastrDefaultInfo').click(function() {
+      toastr.info('test')
+    });
+    $('.toastrDefaultError').click(function() {
+      toastr.error('test')
+    });
+    $('.toastrDefaultWarning').click(function() {
+      toastr.warning('test')
+    });
+
+    $('.toastsDefaultDefault').click(function() {
+      $(document).Toasts('create', {
+        title: 'Toast Title',
+        body: 'test'
+      })
+    });
+    $('.toastsDefaultTopLeft').click(function() {
+      $(document).Toasts('create', {
+        title: 'Toast Title',
+        position: 'topLeft',
+        body: 'test'
+      })
+    });
+    $('.toastsDefaultBottomRight').click(function() {
+      $(document).Toasts('create', {
+        title: 'Toast Title',
+        position: 'bottomRight',
+        body: 'test'
+      })
+    });
+    $('.toastsDefaultBottomLeft').click(function() {
+      $(document).Toasts('create', {
+        title: 'Toast Title',
+        position: 'bottomLeft',
+        body: 'test'
+      })
+    });
+    $('.toastsDefaultAutohide').click(function() {
+      $(document).Toasts('create', {
+        title: 'Toast Title',
+        autohide: true,
+        delay: 750,
+        body: 'test'
+      })
+    });
+    $('.toastsDefaultNotFixed').click(function() {
+      $(document).Toasts('create', {
+        title: 'Toast Title',
+        fixed: false,
+        body: 'test'
+      })
+    });
+    $('.toastsDefaultFull').click(function() {
+      $(document).Toasts('create', {
+        body: 'test',
+        title: 'Toast Title',
+        subtitle: 'Subtitle',
+        icon: 'fas fa-envelope fa-lg',
+      })
+    });
+    $('.toastsDefaultFullImage').click(function() {
+      $(document).Toasts('create', {
+        body: 'test',
+        title: 'Toast Title',
+        subtitle: 'Subtitle',
+        image: '../../dist/img/user3-128x128.jpg',
+        imageAlt: 'User Picture',
+      })
+    });
+    $('.toastsDefaultSuccess').click(function() {
+      $(document).Toasts('create', {
+        class: 'bg-success',
+        title: 'Toast Title',
+        subtitle: 'Subtitle',
+        body: 'test'
+      })
+    });
+    $('.toastsDefaultInfo').click(function() {
+      $(document).Toasts('create', {
+        class: 'bg-info',
+        title: 'Toast Title',
+        subtitle: 'Subtitle',
+        body: 'test'
+      })
+    });
+    $('.toastsDefaultWarning').click(function() {
+      $(document).Toasts('create', {
+        class: 'bg-warning',
+        title: 'Toast Title',
+        subtitle: 'Subtitle',
+        body: 'test'
+      })
+    });
+    $('.toastsDefaultDanger').click(function() {
+      $(document).Toasts('create', {
+        class: 'bg-danger',
+        title: 'Toast Title',
+        subtitle: 'Subtitle',
+        body: 'test'
+      })
+    });
+    $('.toastsDefaultMaroon').click(function() {
+      $(document).Toasts('create', {
+        class: 'bg-maroon',
+        title: 'Toast Title',
+        subtitle: 'Subtitle',
+        body: 'test'
+      })
+    });
+  });
+
+</script>
 </body>
 </html>
